--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,5 @@
 {
   "name": "frontend",
-  "proxy": "http://127.0.0.1:5000",
-  "allowedHosts": "all",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,6 +18,7 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
