--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-Training-Project",
   "version": "1.0.0",
   "description": "MERN shopping cart app",
-  "main": "server.js",
+  "main": "app.js",
   "type": "module",
   "scripts": {
     "build": "cd backend && npm install  && cd ../frontend && npm install && npm run build",
